--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -11,3 +11,4 @@ lazy_static = "1.4.0"
 nom = "7.1.1"
 pathfinding = "4.2.0"
 regex = "1.7.0"
+strum = { version = "0.24.1", features = ["derive"] }
