--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -11,3 +11,4 @@ num-derive = "0.3.3"
 num-traits = "0.2.15"
 ordered-float = "3.4.0"
 pathfinding = "4.2.0"
+strum = { version = "0.24.1", features = ["derive"] }
