--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.5"
+lazy_static = "1.4.0"
+num = "0.4.0"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 ordered-float = "3.4.0"
 pathfinding = "4.2.0"
+regex = "1.7.1"
 strum = { version = "0.24.1", features = ["derive"] }
