--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 itertools = "0.10.5"
 lazy_static = "1.4.0"
+nom = "7.1.3"
 num = "0.4.0"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
