--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 
 [dependencies]
 aho-corasick = "1.1.2"
+crossbeam-channel = "0.5.8"
 itertools = "0.12.0"
+num = "0.4.1"
+num-derive = "0.4.1"
+num-traits = "0.2.17"
